--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -23,8 +23,9 @@ button {
 main {
   max-width: 95%;
   padding: 20px;
-  padding-top: 50px;
+  margin-top: 100px;
 }
+
 nav {
   position: fixed;
   top: 0;
