--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,15 +1,23 @@
 
+.loginRegister {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-right: 10px;
+}
+
 .navCanonizeLink, .canonizeDormant{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-self: center;
+    margin-left: 10px;
 }
 .navLink {
     color: purple;
     text-decoration: underline;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+    justify-content: space-evenly;
+    padding: 10px;
 }
