--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -4,3 +4,17 @@ input {
     padding: 5px;
     margin-bottom: 10px;
 }
+
+h1.canonize {
+    font-family: 'Roboto Slab', serif;
+    font-size: 45px;
+}
+
+@media screen and (min-width: 800px) {
+    .landingContainer {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+}
