--- a/src/components/UserCanonItem/UserCanonItem.css
+++ b/src/components/UserCanonItem/UserCanonItem.css
@@ -1,11 +1,17 @@
 .navCharacter {
     border-style: solid;
+    border-color: darkgray;
     border-radius: 5px;
+    background-color: #FFFEFA;
     margin-bottom: 15px;
     padding: 5px;
+    max-width: 95%
 }
 
 .navCharacter:hover{
-    background-color: black;
+    background-color: #0B9690;
     color: white;
+    border-color: #0B9690;
+    padding: 15px;
+    font-size: 25px;
 }
