--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, input {
   font-family: 'Source Code Pro', monospace;
 }
 
@@ -19,8 +19,10 @@ nav, footer {
 button {
   background-color: #0B9690;
   color: white;
-  border-radius: 5px;
-  padding: 15px 32px;
+  border-radius: 2px;
+  font-size: 16px;
+  padding: 15px 20px;
+  border: none;
 }
   
 main {
@@ -55,6 +57,9 @@ ul {
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  button {
+    padding: 15px 25px;
   }
 }
   
