--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -24,6 +24,10 @@ button {
   padding: 15px 20px;
   border: none;
 }
+
+button:hover {
+  background-color: #4A093E;
+}
   
 main {
   margin-top: 100px;
@@ -53,11 +57,6 @@ ul {
 }
 
 @media screen and (min-width: 800px) {
-  main{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
   button {
     padding: 15px 25px;
   }
