--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 h1, h2, h3, h4, h5, input {
@@ -19,10 +20,10 @@ nav, footer {
 button {
   background-color: #0B9690;
   color: white;
-  border-radius: 2px;
-  font-size: 16px;
-  padding: 15px 20px;
-  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  width: 95%;
+  padding: 10px;
 }
   
 main {
@@ -50,6 +51,17 @@ nav {
 ul {
   list-style-type: none;
   padding: 0;
+}
+
+.successMessage {
+  color: #219600
+}
+
+.errorMessage {
+  background-color:#BF0000;
+  color: white;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 @media screen and (min-width: 800px) {
