--- a/src/components/UserCanonItem/UserCanonItem.css
+++ b/src/components/UserCanonItem/UserCanonItem.css
@@ -1,16 +1,18 @@
 .navCharacter {
     border-style: solid;
     border-color: darkgray;
+    border-width: 2px;
     border-radius: 5px;
     background-color: #FFFEFA;
     margin-bottom: 15px;
-    padding: 5px;
-    max-width: 95%
+    padding: 10px;
+    max-width: 95%;
+    font-size: 20px;
 }
 
 .navCharacter:hover{
     background-color: #0B9690;
-    color: white;
+    color: #FFFEFA;
     border-color: #0B9690;
     padding: 10px;
     font-size: 20px;
