--- a/src/components/UserExpandedItem/UserExpandedItem.css
+++ b/src/components/UserExpandedItem/UserExpandedItem.css
@@ -1,9 +1,5 @@
-.expandedUlChar {
-    max-width: 80%;
-}
-
 .characterAvatar {
-    max-width: 95%;
+    max-width: 60%;
     border-style: solid;
     border-width: 10px;
     border-color: #daa520;
@@ -24,13 +20,18 @@
 
 @media screen and (min-width: 800px) {
     .characterAvatar {
-        max-width: 80%;
-        max-height: 50%;
+        max-width: 60%;
     }
     .characterName {
         text-align: center;
     }
     .characterButtons {
         padding: 5px;
+    }
+}
+
+@media screen and (min-width: 1300px) {
+    .characterAvatar{
+        max-width: 50%;
     }
 }
