added button to log in to guest account, updated README, added About link to nav

--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -15,6 +15,12 @@ h1.canonize {
 .startButton, .registerButton, .loginButton, .instructionButton {
     width: unset;
 }
+
+.creditParagraph {
+    font-size: 12px;
+    font-family: 'Source Code Pro', monospace;
+    margin-top: 50px;
+}
 @media screen and (min-width: 800px) {
     .landingContainer {
         position: absolute;
