refactored user interface for timeout and dynamic insertion of username to myCanon page

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -26,3 +26,11 @@
     padding: 10px;
     margin-top: 15px;
 }
+
+.userName {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 10px;
+    margin-top: 15px;
+}
