--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -20,6 +20,17 @@ h1.canonize {
     width: unset;
 }
 
+.login, .registration {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #4A093E;
+    border-radius: 10px;
+    color: white;
+    margin: 10px;
+    padding: 5px;
+}
 .creditParagraph {
     font-size: 12px;
     font-family: 'Source Code Pro', monospace;
