adjusted styling and added fade in animation for registration and login components

--- a/src/routes/LandingPage/LandingPage.css
+++ b/src/routes/LandingPage/LandingPage.css
@@ -44,6 +44,11 @@ h1.canonize {
         transform: translate(-50%, -50%);
     }
     .login, .registration {
-        width: unset;
+        max-width: 95%;
+        margin-left: 25px;
+    }
+    input {
+        max-width: 85%;
+        margin-bottom: 15px;
     }
 }
